--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Is it Dan's Birthday?</title>
+    <title>Is it Nina's Birthday?</title>
   </head>
   <body>
 
@@ -12,10 +12,10 @@
           <td colspan="4" class="info">Birthday Countdown</td>
         </tr>
         <tr class="info">
-          <td id="days">5</td>
-          <td id="hours">5</td>
+          <td id="days">120</td>
+          <td id="hours">4</td>
           <td id="minutes">15</td>
-          <td id="seconds">01</td>
+          <td id="seconds">32</td>
         </tr>
 
         <tr>
