--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Is it Nina's Birthday?</title>
+    <title>Is it Dan's Birthday?</title>
   </head>
   <body>
 
@@ -13,9 +13,9 @@
         </tr>
         <tr class="info">
           <td id="days">120</td>
-          <td id="hours">4</td>
-          <td id="minutes">15</td>
-          <td id="seconds">32</td>
+          <td id="hours">0</td>
+          <td id="minutes">00</td>
+          <td id="seconds">00</td>
         </tr>
 
         <tr>
