--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="countdown">
       <table class="countdownContainer">
         <tr class="info">
-          <td colspan="4" class="info">Birthday Countdown</td>
+          <td colspan="4" class="info">Dan's Birthday Countdown</td>
         </tr>
         <tr class="info">
           <td id="days">120</td>
