--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div id="birthdayTime">
       <h3>YES</h3>
-      <a href="https://youtu.be/cEJy2q27hVk?t=3" target="_blank">
+      <a href="https://www.youtube.com/watch?v=8mWW6kRITEY" target="_blank">
         <img src="https://i.imgur.com/X3Xyf76.png" id="unicornPicture">
       </a>
 
